完善ui，添加每个选项的图标；完善action bar与状态栏颜色，使得与系统界面调节工具的ui保持一致；取消基佬紫

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -11,5 +11,5 @@
     <string name="attachment_summary_on">强制所有应用使用高性能调度</string>
     <string name="attachment_summary_off">自动识别游戏并选择合适的调度</string>
     <string name="cpusche" >CPU调度参数</string>
-    <string name="statusbar" >状态栏</string>
+    <string name="statusbar" >界面</string>
 </resources>
